native/anim_svg_core/include/anim_svg_core.h

#ifndef ANIM_SVG_CORE_H
#define ANIM_SVG_CORE_H

/* AUTO-GENERATED by cbindgen — do not edit. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Per-call options. `log_level` is a NUL-terminated ASCII string; null
 * means "info". `reserved` is 0-filled for future expansion.
 */
typedef struct {
    const char *log_level;
    uint32_t reserved;
} AnimSvgConvertOptions;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Convert an SVG string to a Lottie JSON envelope.
 *
 * # Safety
 * `svg` must be a valid NUL-terminated UTF-8 C string. `opts` may be
 * null or point to a valid `AnimSvgConvertOptions`. Returned pointer
 * must be freed with `anim_svg_free_string`. Returns null only on
 * allocation failure or if `svg` is null.
 */
 const char *anim_svg_convert(const char *svg, const AnimSvgConvertOptions *opts);

/**
 * Free a string returned by any `anim_svg_*` function.
 *
 * # Safety
 * `s` must have been returned by an `anim_svg_*` function and not
 * previously freed. Passing null is a no-op.
 */
 void anim_svg_free_string(const char *s);

/**
 * Returns the native core version as a static C string. Do not free.
 */
 const char *anim_svg_core_version(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* ANIM_SVG_CORE_H */